2025-09-13  Araki Ken  <arakiken@users.sf.net>

	* vte.c, vte_xlib.c: Pressing Button3 popups a context menu with the use
	  of GMenuModel set by vte_terminal_set_context_menu_model() in gtk4.

2025-09-07  Araki Ken  <arakiken@users.sf.net>

	* vte.c: Implement vte_terminal_get_scrollback_lines().

	* vte.c: Cast pid_t -> GPid

2025-09-07  Araki Ken  <arakiken@users.sf.net>

	* README.cocoa, README.cocoatouch: Updated.

	* ui_shortcut.c:
	  Change the default values of the following shortcuts on MacOSX.
	  - INSERT_CLIPBOARD = Command+v
	  - COPY_CLIPBOARD = Command+c
	  (https://github.com/arakiken/mlterm/issues/150)

	* vte.c, vte_{x11|wayland}.c, ui_screen.c, wayland/ui_display.c,
	  gtk/Makefile.in, Makefile.in:
	  Support libvte-2.91-gtk4.

2025-08-17  Araki Ken  <arakiken@users.sf.net>

	* vt_parser.c: Add 52 to DA1.
	  (https://github.com/arakiken/mlterm/issues/144)

2025-08-16  Araki Ken  <arakiken@users.sf.net>

	* cocoa.m: CGRect -> NSRect

2025-08-15  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, README.ja, PROTOCOL: Updated.

	* ui_main_config.c: Add --adc/use_arabic_dynamic_comb option.

	* vt_parser.c: vt_parser_{set|get}_config() supports "use_arabic_dynamic_comb".

	* vt_shape.[ch], vt_functbl_bidi.c: Add vt_{get|set}_use_arabic_dynamic_comb.

	* vt_ctl_loader.h:
	  - Add VT_{SET|GET}_USE_ARABIC_DYNAMIC_COMB.
	  - CTL_API_VERSION: 0x3 -> 0x4

	* vt_shape_bidi.c:
	  - Add vt_{get|set}_use_arabic_dynamic_comb().
	  - Add 'int force' argument to vt_is_arabic_combining().
	  - vt_is_arabic_combining() returns false if use_arabic_dynamic_comb is false
	    and force is false.

	* xlib/ui_font.c: Fix compiling error if NO_DYNAMIC_LOAD_TYPE is defined.

	* cocoa.m: CGRect -> NSRect

2025-08-11  Araki Ken  <arakiken@users.sf.net>

	* MLActivity.java: Use reflection to call checkSelfPermission and
	  requestPermissions to enable compiling with old apis.

2025-08-10  Araki Ken  <arakiken@users.sf.net>

	* MLActivity.java: